log
Thu 09 May 2024 08:15:21 PM UTC: 
 treemap.c | 197 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 179 insertions(+), 18 deletions(-)
In file included from test.c:4:
treemap.c:39:48: error: parameter 1 (‘key1’) has void type [-Werror]
   39 | TreeMap * createTreeMap(int (lower_than) (void key1, void* key2))
      |                                           ~~~~~^~~~
treemap.c:39:11: error: conflicting types for ‘createTreeMap’; have ‘TreeMap *(int (*)(void,  void *))’
   39 | TreeMap * createTreeMap(int (lower_than) (void key1, void* key2))
      |           ^~~~~~~~~~~~~
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:11:11: note: previous declaration of ‘createTreeMap’ with type ‘TreeMap *(int (*)(void *, void *))’
   11 | TreeMap * createTreeMap(int (*lower_than_int) (void* key1, void* key2));
      |           ^~~~~~~~~~~~~
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:21: error: assignment to ‘int (*)(void *, void *)’ from incompatible pointer type ‘int (*)(void,  void *)’ [-Werror=incompatible-pointer-types]
   44 |     new->lower_than = lower_than;
      |                     ^
test.c: In function ‘create_test1’:
test.c:77:32: error: passing argument 1 of ‘createTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   77 |     TreeMap* t = createTreeMap(lower_than_int);
      |                                ^~~~~~~~~~~~~~
      |                                |
      |                                int (*)(void *, void *)
In file included from test.c:4:
treemap.c:39:30: note: expected ‘int (*)(void,  void *)’ but argument is of type ‘int (*)(void *, void *)’
   39 | TreeMap * createTreeMap(int (lower_than) (void key1, void* key2))
      |                         ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
711d87e
Thu 09 May 2024 08:16:19 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|2
total_score: 50/70
d5b4f35
